Add model switcher

--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
         <div class="subtitle">Листайте, чтобы вращать. Колесо — масштаб.</div>
       </div>
       <div class="actions">
+        <label class="select">
+          <span>Модель</span>
+          <select id="modelSelect">
+            <option value="0">Модель 1</option>
+            <option value="1">Модель 2</option>
+            <option value="2">Модель 3</option>
+            <option value="3">Модель 4</option>
+            <option value="4">Модель 5</option>
+          </select>
+        </label>
         <button class="btn ghost" id="resetView">Сбросить вид</button>
       </div>
     </header>
